[tool.poetry]
name = "bcsync"
version = "0.4.4"
description = "Sync Rocket League replays to ballchasing.com"
authors = ["puttehi <peteeez95@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10,<3.12"
requests = "^2.28.1"
tabulate = "^0.9.0"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
mypy = "^0.982"
isort = "^5.10.1"
pyinstaller = "^5.5"
vulture = "^2.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
